F09-foer-timen: kapasitet, Lyd, rester fra F08